--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,13 @@
     <artifactId>CGB2102_JAVASE</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <properties>
+        <!-- 设置 JDK 版本为 1.8 -->
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <!-- 设置编码为 UTF-8 -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+    </properties>
 </project>
